1) Fixed an issue where the incorrect values visible in the dependents tab for publication. Fixes #6307 2) Ensure that the primary key should be visible properly in the table dialog. Fixes #6316

--- a/web/pgadmin/static/scss/_bootstrap.overrides.scss
+++ b/web/pgadmin/static/scss/_bootstrap.overrides.scss
@@ -255,7 +255,7 @@ legend {
 .table {
 	margin-bottom: 0rem;
 	user-select: text;
-	table-layout: fixed;
+	table-layout: auto;
 	max-width: none;
 	width: auto;
 	min-width: 100%;
